# BevLaneDet_Lanes

./: requirements_lanes.txt
bevfusion_prb/: Dockerfile
bevfusion_prb/MS3D/: requirements.txt
bevfusion_prb/MS3D/pcdet/datasets/: dataset.py
bevfusion_prb/MS3D/pcdet/utils/: tracker_utils.py  transform_utils.py
bevfusion_prb/MS3D/tools/: correct_gt.py  create_config_and_scripts.py  smooth_tracks.py  visualize_bev.py
bevfusion_prb/MS3D/tracker/mot_3d/: association.py  frame_data.py  mot.py
bevfusion_prb/mmdet3d/core/utils/: visualize.py
bevfusion_prb/mmdet3d/datasets/: nuscenes_dataset.py
bevfusion_prb/mmdet3d/datasets/pipelines/: loading.py  transforms_3d.py
bevfusion_prb/mmdet3d/models/backbones/: sparse_encoder.py
bevfusion_prb/mmdet3d/models/vtransforms/: depth_lss.py  lss.py
bevfusion_prb/trackingtools/: CMakeLists.txt  README.md
bevfusion_prb/trackingtools/TrackingLib/include/: IMMFilters.hpp  TypesDefinitions.hpp
bevfusion_prb/trackingtools/python/: example.py
bevfusion_prb/trackingtools/pythonpackage/: ndarray_converter.h  python_module.cpp
docker/: Dockerfile
docker_bevfusion/: Dockerfile  requirements_annot3d.txt  root_connect.sh  run_docker.sh.tpl
docker_bevfusion/configs/: default.yaml
docker_bevfusion/configs/aimotive/: default.yaml
docker_bevfusion/configs/aimotive_reduced/: default.yaml
docker_bevfusion/configs/psa_aimotive/: default.yaml
docker_bevfusion/core/utils/: visualize.py
docker_bevfusion/datasets/: aimotive_dataset.py  custom_3d.py  nuscenes_dataset.py
docker_bevfusion/datasets/pipelines/: formating.py  loading.py
docker_bevfusion/docker/: Dockerfile  connect_to_docker.sh
docker_bevfusion/mmdet3d/datasets/: EvalFunctions.py
docker_bevfusion/mmdet3d/datasets/pipelines/: dbsampler.py  transforms_3d.py
docker_bevfusion/mmdet3d/models/vtransforms/: base.py
docker_bevfusion/mmdet3d/ops/bev_pool/: bev_pool.py
docker_bevfusion/tools/: train.py  visualize.py
docker_bevfusion/tools/data_converter/: aimotive_converter.py  aimotive_online_converter.py  create_gt_database_simple.py  ms3d_to_nuscenes_converter.py  psa_to_nuscenes_converter.py  psa_to_nuscenes_converter_sync.py
docker_bevfusion_prb/: Dockerfile  requirements_annot3d.txt
docker_bevfusion_prb/MS3D/pcdet/datasets/: __init__.py
docker_bevfusion_prb/MS3D/tools/: convertformat.py  correct_gt.py  ensemble_kbf.py  generate_instancesegmentation.py  generate_tracks.py  smooth_tracks.py  temporal_refinement.py  visualize_bev_all.py
docker_bevfusion_prb/mmdet3d/datasets/: EvalFunctions.py
docker_bevfusion_prb/trackingtools/: setup.py
docker_bevfusion_prb/trackingtools/TrackingLib/: CMakeLists.txt
docker_bevfusion_prb/trackingtools/TrackingLib/include/: TrackingFilterBev.hpp  UKFModelFilter.hpp  globalDefinitions.hpp
docker_bevfusion_prb/trackingtools/TrackingLib/src/: IMMFilters.cpp  TrackingFilterBev.cpp  UKFModelFilter.cpp
docker_bevfusion_prb/trackingtools/pythonpackage/: ndarray_converter.cpp  python_TrackSmoothing.cpp
docker_bevlanedet_prb/: Dockerfile  requirements_lanes.txt
(+60 files in other folders)
